[gd_scene load_steps=9 format=4 uid="uid://dny7gpp3gr2ix"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_o6qxd"]
[ext_resource type="Script" path="res://Scripts/main_camera.gd" id="2_lyucm"]
[ext_resource type="PackedScene" uid="uid://b45fnm6j6cgay" path="res://Scenes/terain.tscn" id="2_uc1fd"]
[ext_resource type="Script" path="res://Scripts/button.gd" id="4_n6sat"]
[ext_resource type="Script" path="res://Singletons/Connection.gd" id="5_utmmc"]
[ext_resource type="TileSet" uid="uid://cjvlmebhhiwcw" path="res://Tilesets/terain.tres" id="6_bpi6s"]
[ext_resource type="Script" path="res://Scripts/leaderboard_list.gd" id="7_swts6"]
[ext_resource type="Script" path="res://Scripts/leaderboard_search.gd" id="8_k5w7t"]

[node name="Main" type="Node2D"]
script = ExtResource("1_o6qxd")

[node name="main_camera" type="Camera2D" parent="." node_paths=PackedStringArray("tilemaplayer")]
zoom = Vector2(0.15, 0.15)
limit_smoothed = true
position_smoothing_enabled = true
editor_draw_limits = true
script = ExtResource("2_lyucm")
tilemaplayer = NodePath("../terain")

[node name="terain" parent="." node_paths=PackedStringArray("main_camera", "terrain_dirt") instance=ExtResource("2_uc1fd")]
tile_map_data = PackedByteArray("AAAQAAYAAAAFAAIAAAAQAAIAAAAMAAYAAAARAAIAAAAMAAYAAAASAAIAAAAMAAYAAAATAAIAAAAKAAYAAAAQAAEAAAAMAAYAAAARAAEAAAALAAYAAAASAAEAAAAMAAYAAAATAAEAAAAMAAYAAAAQAAAAAAAMAAYAAAARAAAAAAAMAAYAAAASAAAAAAAMAAYAAAATAAAAAAAMAAYAAAAUAAAAAAALAAYAAAAUAAEAAAAMAAYAAAAUAAIAAAAMAAYAAAAPAAIAAAAKAAYAAAAPAAEAAAAMAAYAAAAPAAAAAAAMAAYAAAAVAAIAAAAMAAYAAAAVAAEAAAAMAAYAAAAOAAAAAAAMAAYAAAAOAAEAAAAMAAYAAAAOAAIAAAAMAAYAAAAVAAAAAAAMAAYAAAAVAAUAAAABAAIAAAA=")
main_camera = NodePath("../main_camera")
terrain_dirt = NodePath("../terrain_dirt")

[node name="terrain_dirt" type="TileMapLayer" parent="."]
tile_set = ExtResource("6_bpi6s")
collision_enabled = false
navigation_enabled = false

[node name="WebsocketManager" type="Node" parent="."]
script = ExtResource("5_utmmc")

[node name="GUI_Layer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUI_Layer"]
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 11.0
offset_right = 1146.0
offset_bottom = 311.0
mouse_force_pass_scroll_events = false

[node name="leaderboard" type="Button" parent="GUI_Layer/GUI"]
layout_mode = 0
offset_left = 456.0
offset_top = 9.0
offset_right = 564.0
offset_bottom = 40.0
toggle_mode = true
text = "Leaderboard"
script = ExtResource("4_n6sat")

[node name="leaderboard_panel" type="Panel" parent="GUI_Layer/GUI"]
visible = false
top_level = true
layout_mode = 0
offset_left = 591.0
offset_top = 18.0
offset_right = 1030.0
offset_bottom = 289.0

[node name="leaderboard_list" type="ItemList" parent="GUI_Layer/GUI/leaderboard_panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 45.0
offset_right = 424.0
offset_bottom = 260.0
allow_reselect = true
max_text_lines = 2
item_count = 2
max_columns = 2
same_column_width = true
fixed_column_width = 100
item_0/text = "Gnome ID"
item_0/selectable = false
item_1/text = "Score"
item_1/selectable = false
script = ExtResource("7_swts6")

[node name="leaderboard_search" type="LineEdit" parent="GUI_Layer/GUI/leaderboard_panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 424.0
offset_bottom = 39.0
script = ExtResource("8_k5w7t")
